Added recipes serializers and got processors working